
This is a list of noteworthy changes across releases. 
For more details and developer visible changes see the ChangeLog file.
For a list of compatibility related changes see the UPGRADE file.

--------------------------------------------------------------------------------
Version <stable-version> released on <releaseDate>

New Hardware
 * Adding support for Cisco Catalyst 3560G

--------------------------------------------------------------------------------
Version 3.4.1 released on 2012-06-18

Bug Fixes
 * Regression in interface, network, floating-device and violation management Admin and CLI (#1468)
 * Load-balancer support: Apache Access List are now updated to allow them to reach the portal
 * Debian: missing dependency preventing Apache (captive portal, webadmin) to start

Translations
 * Updated Brazilian Portuguese (pt_BR) translation (Thanks to Diego de Souza Lopes)

--------------------------------------------------------------------------------
Version 3.4.0 released on 2012-06-13

Security
 * Fixed a reflected cross-site scripting (XSS) vulnerability in Web Admin guest management (#1454)

New Hardware
 * H3C S5120 series supports MAC-Authentication and 802.1X with or without VoIP
 * Added Role support for all Cisco Wireless (WLC) models
 * Brocade 6400 series supports MAC-Authentication and 802.1X with or without VoIP
 * Brocade RF Switches support (Wireless controller)

New Features
 * debian packages (#1066, #1067, #1463)
 * Support for up to 100 custom VLANs (Defaults to 5 see relevant FAQ entry to enable more)
 * Node bulk importation now allow you to define default values for pid, category and voip in pf.conf
 * New graphics showing bandwidth consumed by os class and the top 25 bandwidth consumers

Enhancements
 * minor refactoring and cleanup
 * debian support: arp binary location now configurable ([services].arp_binary)
 * log the switch IP when a trap is skipped due to a dynamic uplink fetch not working